camel-project/target/classes/META-INF/jkube/openshift/new-api-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/ghoelzer-rht/apicurito-demo.git
    app.openshift.io/vcs-uri: https://github.com/ghoelzer-rht/apicurito-demo.git
    jkube.io/git-commit: 75392869630c5bcf8b8226c317e1d732e1a5cd94
    jkube.io/git-branch: main
  labels:
    app: new-api
    provider: jkube
    version: 1.0-SNAPSHOT
    group: io.example
  name: new-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: new-api
    provider: jkube
    group: io.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: main
        jkube.io/git-url: https://github.com/ghoelzer-rht/apicurito-demo.git
        app.openshift.io/vcs-uri: https://github.com/ghoelzer-rht/apicurito-demo.git
        jkube.io/git-commit: 75392869630c5bcf8b8226c317e1d732e1a5cd94
        jkube.io/git-branch: main
      labels:
        app: new-api
        provider: jkube
        version: 1.0-SNAPSHOT
        group: io.example
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: new-api:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: new-api:latest
    type: ImageChange
