camel-project/target/classes/META-INF/jkube/openshift/new-api-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/ghoelzer-rht/apicurito-demo.git
    app.openshift.io/vcs-uri: https://github.com/ghoelzer-rht/apicurito-demo.git
    jkube.io/git-commit: 75392869630c5bcf8b8226c317e1d732e1a5cd94
    jkube.io/git-branch: main
  labels:
    app: new-api
    provider: jkube
    version: 1.0-SNAPSHOT
    group: io.example
  name: new-api
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: new-api
